test fix on mobile

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -19,9 +19,9 @@
 		border: 0.01rem #ebf745 solid;
 	}
 	@media screen and (max-width: 550px) {
-		max-width: 8rem;
+		max-width: 10rem;
 		height: 1.2rem;
-		padding: 0.4rem 0.4rem;
+		padding: 0.6rem 0.6rem;
 		margin: 0.2rem 0rem;
 		font-size: 1rem;
 	}
